# ImplicitRayTracer

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  run.sh  test.sh
docs/: .gitignore  ImplicitSurfacesRayTracer.bib  ImplicitSurfacesRayTracer.tex  build.sh
examples/: spheres.ppm
profiling/: README.md  callgrind.out.af1c3bc  callgrind.out.e5e3a1a
src/: box.cpp  box.h  defaults.h  image.cpp  image.h  intersecter.cpp  intersecter.h  main.cpp  point.cpp  point.h  ppmwriter.cpp  ppmwriter.h  progress.cpp  progress.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  sphere.cpp  sphere.h  vector.cpp  vector.h  vector3d.cpp  vector3d.h
src/implicits/: box.cpp  box.h  intersection.cpp  intersection.h  octree.cpp  octree.h  roots.cpp  roots.h  spaceprune.cpp  spaceprune.h  surface.cpp  surface.h
test/: box_test.cpp  geometric_sphere_test.cpp  implicit_sphere_test.cpp  intersection_test.cpp  octree_test.cpp  point_test.cpp  ray_test.cpp  raytracer_test.cpp  roots_test.cpp  spaceprune_test.cpp  surface_test.cpp  vector_test.cpp
